--- a/app/src/main/res/layout/activity_lobby.xml
+++ b/app/src/main/res/layout/activity_lobby.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="#A9FFF7"
     tools:context=".LobbyActivity"
     android:weightSum="100"
     >
@@ -60,7 +61,8 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+
+        android:layout_height="wrap_content"
         android:layout_weight="10"
         android:orientation="horizontal"
         android:weightSum="100">
