--- a/app/src/main/res/layout/customuser.xml
+++ b/app/src/main/res/layout/customuser.xml
@@ -6,8 +6,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:id="@+id/UserList"
         android:gravity="center"
+        android:clickable="true"
         android:background="@drawable/bordersdrawable">
         <TextView
 
@@ -15,6 +17,13 @@
         android:id="@+id/UserListItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+        <TextView
+
+            android:hint="text"
+            android:id="@+id/UserListItemStats"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
 
     </LinearLayout>
 </LinearLayout>
